mvp-1.1-bonus.chatbot

--- a/autres-contes.html
+++ b/autres-contes.html
@@ -7,7 +7,12 @@
 <body>
   <header>
     <h1>Autres contes</h1>
-    <a href="conteur.html">Retour à la page d'accueil</a>
+    <nav>
+      <ul>
+    <li><a href="conteur.html">Retour à la page d'accueil</a></li>
+    <li><a href="chat.html">Chatbot pour enfants</a></li>
+  </ul>
+  </nav>
   </header>
   <main>
     <h2>Le caillou qui voulait voir le monde</h2>
