--- a/html/autres-contes.html
+++ b/html/autres-contes.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <title>Autres contes</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 <body>
   <header>
     <h1>Autres contes</h1>
     <nav>
       <ul>
-    <li><a href="conteur.html">Retour à la page d'accueil</a></li>
-    <li><a href="chat.html">Chatbot pour enfants</a></li>
+    <li><a href="/html/conteur.html">Retour à la page d'accueil</a></li>
+    <li><a href="/html/chat.html">Chatbot pour enfants</a></li>
   </ul>
   </nav>
   </header>
