--- a/html/chat.html
+++ b/html/chat.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <title>Chat GPT pour enfants</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
   <header>
     <h1>Chat GPT pour enfants</h1>
     <nav>
         <ul>
-          <li><a href="conteur.html">Accueil</a></li>
-          <li><a href="autres-contes.html">Contes pour enfants</a></li>
+          <li><a href="/html/conteur.html">Accueil</a></li>
+          <li><a href="/html/autres-contes.html">Autres contes</a></li>
         </ul>
         </nav>
   </header>
@@ -23,6 +23,6 @@
       <input type="submit" value="Envoyer">
     </form>
   </main>
-  <script src="scriptchat.js"></script>
+  <script src="/javascript/scriptchat.js"></script>
 </body>
 </html>
